# dog-vs-cat-vs-rabbit-image-classifier

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: utils.py
src/data/: data_model.py  img_label_and_path.py  labels.py  transforms.py
src/errors/: errors.py
src/models/: resnet18_base.py  train_module.py
