[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch-lightning = "~1.8.6"
pandas = "~1.5.2"
scikit-learn = "~1.2.0"
matplotlib = "~3.6.3"
seaborn = "~0.12.2"
flake8 = "~6.0.0"
tensorboard = "~2.11.2"

[tool.poetry.group.dev.dependencies]
black = "~22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
